# HR-RAG-BOT

./: .gitignore  README.md  docker-compose.yml
CLIENT/: Dockerfile  main.py  pyproject.toml  requirements.txt
SERVER/: Dockerfile  main.py  pyproject.toml  requirements.txt
SERVER/auth/: hash_utils.py  models.py  routes.py  utils_email.py
SERVER/chat/: chat_query.py  models.py  routes.py
SERVER/config/: db.py
SERVER/docs/: routes.py  vectorstore.py
SERVER/utils/: email_utils.py  hash_utils.py
